--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F40009;
+  background-color: #33B8FF;
   color: #fff;
   overflow-x: hidden;
 }
