--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,8 @@ body {
 #root {
   min-height: 100vh;
   display: flex;
+  background-color: #33B8FF;
+  color: white;
 }
 
 h1 {
@@ -30,6 +32,7 @@ h1 {
   color: #fff;
   background-color: #000;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .unsupported-network {
